# awsbreaker

./: .gitignore  .pre-commit-config.yaml  mise.toml  package.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/instructions/: codeReview.instructions.md
.github/workflows/: deploy.yaml  lint.yaml  publish-pypi.yaml
docs/: index.md  usage-cli.md
docs/.vitepress/: config.mts
docs/guide/: config-reference.md  getting-started.md  what-is-awsbreaker.md
docs/public/: CNAME
scripts/: setup_project.sh
src/awsbreaker/: __init__.py  cli.py  logger.py  main.py  orchestrator.py  reporter.py
src/awsbreaker/conf/: __init__.py  config.yaml
src/awsbreaker/core/: session_helper.py
src/awsbreaker/services/: ec2_service.py  lambda_service.py
src/awsbreaker/services/ec2/: instances.py  key_pairs.py
src/costcutter/: cli.py  main.py  orchestrator.py
src/costcutter/conf/: config.yaml
src/costcutter/services/ec2/: __init__.py  common.py  instances.py  key_pairs.py
src/costcutter/services/s3/: __init__.py  buckets.py
tests/: test_cli.py  test_config_unit.py  test_ec2_instances.py  test_ec2_key_pairs.py  test_logger.py  test_main.py  test_orchestrator.py  test_orchestrator_functional.py  test_reporter_csv.py  test_s3_buckets.py  test_session_helper.py
